--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Convert spreadsheet coordinates like A1, d3:e4, AA31..AB33 to equivalent notations (r1c1, R1C1, d3..e4, {col:1,row:1}...)  and vice versa",
   "main": "lib/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "coffee --map -o lib -c src",
+    "doctoc": "doctoc README.md",
+    "test": "npm run build && tap --harmony lib/tests/*.js"
   },
   "keywords": [
     "spreadsheet",
