--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "coffee --map -o lib -c src",
     "doctoc": "doctoc README.md",
-    "test": "npm run build && tap --harmony lib/tests/*.js"
+    "test": "npm run build && node lib/tests/basic.js"
   },
   "keywords": [
     "spreadsheet",
@@ -17,9 +17,10 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "cnd": "^4.3.1"
+    "cnd": "^4.3.1",
+    "xregexp": "^4.2.0"
   },
   "devDependencies": {
-    "tap": "^12.0.1"
+    "guy-test": "^1.3.3"
   }
 }
